[package]
name = "jolokia"
version = "0.2.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Strong encryption, made simple."
license = "MIT OR Apache-2.0"
repository = "https://github.com/qrichert/jolokia.git"
readme = "README.md"
keywords = ["cryptography", "cli"]
categories = ["command-line-utilities"]

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
# Authenticated Encryption with Associated Data (AEAD) traits.
aead = { version = "0.5.2", features = ["stream"] }
# Human-readable encryption.
base64 = "0.22.1"
# Chacha20-Poly1305 algorithm implementation.
chacha20poly1305 = "0.10.1"
# Output text through a pager.
lessify = "0.4.0"
